# quiz_master_MAD2

./: .gitignore  api_doc  app.py  hello.py  pyproject.toml
backend/: api_config.txt  class SubjectAPI(Resource):.py  config.py  models.py  resources.py  routes.py
frontend/: app.js  index.html
frontend/components/: Navbar.js  SubjectCard.js
frontend/pages/: dashboard.js  home.js  login.js  register.js
frontend/utils/: router.js  store.js
instance/: database.sqlite3
